--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" src="css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 	<header>
-		<a id="logo">CourseOverflow</a>
+		<a href="#" id="logo">Course<span class="thirty">Overflow</span></a>
 		<nav>
 			<ul id="nav">
 				<li><a href="#">Groups</a></li>
