styled the searchbar

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -27,7 +27,7 @@
 		<header>
 			<form action="" class="searchform">
 				<input type="text" class="searchfield" value="Search.." />
-				<input type="button" class="searchbutton" value="go"/>
+				<input type="button" class="searchbutton" value=""/>
 			</form>
 			
 			<ul id="subheader">
@@ -38,7 +38,7 @@
 		<ul id="topic-list">
 				<li></li>
 				<li></li>
-			</ul>
+		</ul>
 	</section>
 </body>
 </html>
