--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
 		<header>
 			<form action="" class="searchform">
 				<input type="text" class="searchfield" value="Search.." />
-				<input type="button" class="searchbutton" value=""/>
+				<input type="submit" class="searchbutton" value=""/>
 			</form>
 			
 			<ul id="subheader">
