added links and tab bar

--- a/html/index.html
+++ b/html/index.html
@@ -24,20 +24,22 @@
 	</div>
 	
 	<section>
-		<header>
+		<header id="content-header">
 			<form action="" class="searchform">
 				<input type="text" class="searchfield" value="Search.." />
 				<input type="submit" class="searchbutton" value=""/>
 			</form>
+			<h3>Discussions</h3>
 			
-			<ul id="subheader">
-				<li><a href="Recent" class="subheader-selected">Recent</a></li>
-				<li><a href="Top">Top</a></li>
-			</ul>
 		</header>
+		<ul id="subheader">
+			<li><a href="#" class="subheader-selected">recent</a></li>
+			<li><a href="#">top</a></li>
+		</ul>
 		<ul id="topic-list">
-				<li></li>
-				<li></li>
+				<li>Please check the website for the MP2 description.  A help session will be given this week. Very likely it will be on this Friday evening (7-8pm, SC1111)....
+				</li>
+				<li>So my dog ate my homework last night so I’m a bit of a bind. Could anyone send me the solutions to the answers? I think that it is quite reasonable given the circumstances...</li>
 		</ul>
 	</section>
 </body>
