added proper styling

--- a/html/index.html
+++ b/html/index.html
@@ -36,11 +36,16 @@
 			<li><a href="#" class="subheader-selected">recent</a></li>
 			<li><a href="#">top</a></li>
 		</ul>
-		<ul id="topic-list">
-				<li>Please check the website for the MP2 description.  A help session will be given this week. Very likely it will be on this Friday evening (7-8pm, SC1111)....
+		<ol id="topic-list">
+				<li>
+					<a href="#" class="topic-title">MP2 Released</a>
+					Please check the website for the MP2 description.  A help session will be given this week. Very likely it will be on this Friday evening (7-8pm, SC1111)....
 				</li>
-				<li>So my dog ate my homework last night so I’m a bit of a bind. Could anyone send me the solutions to the answers? I think that it is quite reasonable given the circumstances...</li>
-		</ul>
+				<li>
+					<a href="#" class="topic-title">I accidentally my homework</a>
+					So my dog ate my homework last night so I’m a bit of a bind. Could anyone send me the solutions to the answers? I think that it is quite reasonable given the circumstances...
+					</li>
+		</ol>
 	</section>
 </body>
 </html>
