--- a/README.html
+++ b/README.html
@@ -29,12 +29,13 @@
 
 <h2>Applications</h2>
 <ul>
-<li><a href="api">CourseOverflow API</a>: A web-based API that can be plugged into any newsgroup reader to add support for user reputations and class subscriptions.</li>
+<li><a href="api">CourseOverflow API</a>: A web-based API that can be plugged into any newsgroup reader (desktop, web, or even mobile) to add support for user reputations and class subscriptions.</li>
 <li><a href="html">CourseOverflow Client</a>: A mockup of a re-designed user interface for html4nntp. Using the CourseOverflow API, it's possible to sort comments by votes and highlight comments from high-rep users.</li>
+<li><a href="html4nntp">html4nntp + CourseOverflow API</a>: A demonstration of the CourseOverflow API using the original html4nntp client that is used at <a href="http://news.cs.illinois.edu">news.cs.illinois.edu</a>.</li>
 </ul>
 
 <h2>Competition</h2>
-<p>Our extension of the CS newsgroups is intended to compete for Best Collaboration Tool. The API we developed could be incorporated into the web-based CS newsgroup clients to not only make life easier for students by remembering what classes they are in, but also allowing students to build a reputation by making helpful comments. The re-designed UI we built feels much cleaner and provides much better usability than (outdated) existing clients.</p>
+<p>Our extension of the CS newsgroups is intended to compete for Best Collaboration Tool. The API we developed could be incorporated into the web-based CS newsgroup clients to not only make life easier for students by remembering what classes they are in, but also allowing students to build a reputation by making helpful comments. In addition, the re-designed UI we built feels much cleaner and provides much improved usability than the (outdated) existing clients.</p>
 
 </body>
 
