--- a/README.html
+++ b/README.html
@@ -31,7 +31,7 @@
 <ul>
 <li><a href="api">CourseOverflow API</a>: A web-based API that can be plugged into any newsgroup reader (desktop, web, or even mobile) to add support for user reputations and class subscriptions.</li>
 <li><a href="html">CourseOverflow Client</a>: A mockup of a re-designed user interface for html4nntp. Using the CourseOverflow API, it's possible to sort comments by votes and highlight comments from high-rep users.</li>
-<li><a href="html4nntp">CourseOverflow API + html4nntp</a>: A demonstration of the CourseOverflow API using the original html4nntp client that is used at <a href="http://news.cs.illinois.edu">news.cs.illinois.edu</a>.</li>
+<li><a href="html4nntp/newsgroups.php">CourseOverflow API + html4nntp</a>: A demonstration of the CourseOverflow API using the original html4nntp client that is used at <a href="http://news.cs.illinois.edu">news.cs.illinois.edu</a>.</li>
 </ul>
 
 <h2>Competition</h2>
