--- a/README.html
+++ b/README.html
@@ -19,12 +19,12 @@
 
 <h2>Technologies</h2>
 <ul>
-<li>HTML/CSS/JS</li>
+<li>HTML5/CSS3/JS</li>
 <li>PHP/MySQL/JSON</li>
 <li><a href="http://courseoverflow.web.cs.illinois.edu/CourseOverflow/">CS projects server</a> (hosting)</li>
 <li><a href="http://news.cs.illinois.edu" target="_blank">CS newsgroup server</a></li>
 <li><a href="http://sourceforge.net/projects/html4nntp/" target="_blank">html4nntp</a> (newsgroup reader)</li>
-<li>GitHub (revision control)</li>
+<li><a href="https://github.com/kryali/CourseOverflow">GitHub</a> (revision control)</li>
 </ul>
 
 <h2>Applications</h2>
@@ -35,7 +35,7 @@
 </ul>
 
 <h2>Competition</h2>
-<p>Our extension of the CS newsgroups is intended to compete for Best Collaboration Tool. The API we developed could be incorporated into the web-based CS newsgroup clients to not only make life easier for students by remembering what classes they are in, but also allowing students to build a reputation by making helpful comments. In addition, the re-designed UI we built feels much cleaner and provides much improved usability than the (outdated) existing clients.</p>
+<p>Our extension of the CS newsgroups is intended to compete for Best Collaboration Tool. The API we developed could be incorporated into the web-based CS newsgroup clients to not only make life easier for students by remembering what classes they are in, but also allowing students to build a reputation by making helpful comments. In addition, the re-designed UI we built feels much cleaner and provides improved usability over the (outdated) existing clients.</p>
 
 </body>
 
