--- a/README.html
+++ b/README.html
@@ -24,7 +24,7 @@
 <li><a href="http://courseoverflow.web.cs.illinois.edu/CourseOverflow/">CS projects server</a> (hosting)</li>
 <li><a href="http://news.cs.illinois.edu" target="_blank">CS newsgroup server</a></li>
 <li><a href="http://sourceforge.net/projects/html4nntp/" target="_blank">html4nntp</a> (newsgroup reader)</li>
-<li><a href="https://github.com/kryali/CourseOverflow">GitHub</a> (revision control)</li>
+<li><a href="https://github.com/kryali/CourseOverflow" target="_blank">GitHub</a> (revision control)</li>
 </ul>
 
 <h2>Applications</h2>
