injects into element

--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
 				<div id="bar">
 					<div id="comments">7</div>
 					<a href="#" class="more">read more</a>
-					<div id="user"><span class="time">2s ago</span><span class="username">john1</span><span class="reputation">4</span></div>
+					<div id="user"><span class="time">12m ago</span><span class="username">john1</span><span class="reputation">4</span></div>
 				</div>
 			</li>
 				<li>
@@ -72,7 +72,7 @@
 					<div id="bar">
 						<div id="comments">10</div>
 						<a href="#" class="more">read more</a>
-						<div id="user"><span class="time">24s ago</span><span class="username">ryali1</span><span class="reputation">48</span></div>
+						<div id="user"><span class="time">24m ago</span><span class="username">ryali1</span><span class="reputation">48</span></div>
 					</div>
 				</li>
 				<li>
