--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
 			<li>
 				<a href="#" id="top">
 					<div id="up">10</div></a>
-				<a href="#" class="topic-title">Select</a>
+				<a href="select.html" class="topic-title">Select</a>
 				<p>
 				We use select to wait for the mmap'ed camera buffers to have data. I
 				believe that every time we first run our program select timeouts, and
@@ -60,7 +60,7 @@
 				<div id="bar">
 					<div id="comments">7</div>
 					<a href="#" class="more">read more</a>
-					<div id="user"><span class="time">12m ago</span><span class="username">john1</span><span class="reputation">4</span></div>
+					<div id="user"><span class="time">4hr ago</span><span class="username">john1</span><span class="reputation">4</span></div>
 				</div>
 			</li>
 				<li>
@@ -72,7 +72,7 @@
 					<div id="bar">
 						<div id="comments">10</div>
 						<a href="#" class="more">read more</a>
-						<div id="user"><span class="time">24m ago</span><span class="username">ryali1</span><span class="reputation">48</span></div>
+						<div id="user"><span class="time">20hr ago</span><span class="username">ryali1</span><span class="reputation">48</span></div>
 					</div>
 				</li>
 				<li>
@@ -83,7 +83,7 @@
 						
 						<div id="comments">3</div>
 						<a href="#" class="more">read more</a>
-						<div id="user"><span class="time">4 days ago</span><span class="username">mishk1</span><span class="reputation">892</span></div>
+						<div id="user"><span class="time">1 days ago</span><span class="username">mishk1</span><span class="reputation">892</span></div>
 					</div>
 				</li>
 		</ol>
