follow this question

--- a/html/select.html
+++ b/html/select.html
@@ -36,12 +36,12 @@
 	
 	<section>
 		<header id="content-header">
-			<form action="" class="searchform">
-				<input type="text" class="searchfield" placeholder="Search.." />
-				<input type="submit" class="searchbutton" value=""/>
-			</form>
 			<h3>12 People viewing</h3>
-			
+			<nav>
+				<ul id="nav">
+					<li><a href="#">Follow This Thread</a></li>
+				</ul>
+			</nav>
 		</header>
 		<ol id="topic-list">
 			<li>
@@ -80,10 +80,10 @@
 					<div id="user"><span class="time">just now</span><span class="username">john1</span><span class="reputation">4</span></div>
 				</div>
 			</li>
-				<li class="right30">
+				<li class="right30 staff">
 					<a href="#" id="top">
 						<div id="up">1</div></a>
-					<p>any more information?
+					<p class="staff">any more information?
 
 					The first select time out may be because the device is not ready. But if the select kills your program, there
 					might be some error code?
