follow this question

--- a/html/index.html
+++ b/html/index.html
@@ -46,6 +46,8 @@
 		<ul id="subheader">
 			<li><a href="#" class="subheader-selected">recent</a></li>
 			<li><a href="#">top</a></li>
+			<li><a href="#">what's hot</a></li>
+			<li><a href="#">most discussed</a></li>
 		</ul>
 		<ol id="topic-list">
 			<li>
